Control de timeout en zuul (Items Productos)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ zuul.routes.productos.path=/api/productos/**
 
 zuul.routes.items.service-id=servicio-items
 zuul.routes.items.path=/api/items/**
+
+# ==> CONFIGURANDO TIMEOUT DE HYSTRIX Y RIBBON 
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=20000
+ribbon.ConnectTimeout=3000
+ribbon.ReadTimeout=10000
