Prueba Timeout OK -> comentando configuracion timeout en properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,6 @@ zuul.routes.items.service-id=servicio-items
 zuul.routes.items.path=/api/items/**
 
 # ==> CONFIGURANDO TIMEOUT DE HYSTRIX Y RIBBON 
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=20000
-ribbon.ConnectTimeout=3000
-ribbon.ReadTimeout=10000
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=20000
+#ribbon.ConnectTimeout=3000
+#ribbon.ReadTimeout=10000
