Agregando cliente usuario

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ zuul.routes.productos.path=/api/productos/**
 zuul.routes.items.service-id=servicio-items
 zuul.routes.items.path=/api/items/**
 
+zuul.routes.usuarios.service-id=servicio-usuarios
+zuul.routes.usuarios.path=/api/usuarios/**
 # ==> CONFIGURANDO TIMEOUT DE HYSTRIX Y RIBBON 
 #hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=20000
 #ribbon.ConnectTimeout=3000
