Configuracion Servidor de recursos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,12 @@ zuul.routes.items.path=/api/items/**
 
 zuul.routes.usuarios.service-id=servicio-usuarios
 zuul.routes.usuarios.path=/api/usuarios/**
+
+zuul.routes.security.service-id=servicio-oauth
+zuul.routes.security.path=/api/security/**
+zuul.routes.security.sensitive-headers=Cookie,Set-Cookie
+
 # ==> CONFIGURANDO TIMEOUT DE HYSTRIX Y RIBBON 
-#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=20000
-#ribbon.ConnectTimeout=3000
-#ribbon.ReadTimeout=10000
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=20000
+ribbon.ConnectTimeout=3000
+ribbon.ReadTimeout=10000
