password encriptado OK

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,6 @@ zuul.routes.security.path=/api/security/**
 zuul.routes.security.sensitive-headers=Cookie,Set-Cookie
 
 # ==> CONFIGURANDO TIMEOUT DE HYSTRIX Y RIBBON 
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=20000
-ribbon.ConnectTimeout=3000
-ribbon.ReadTimeout=10000
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=20000
+#ribbon.ConnectTimeout=3000
+#ribbon.ReadTimeout=10000
